infra/envoy-gateway/puchi-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: puchi-api
  namespace: envoy-gateway-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: puchi-gateway
    gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
  ports:
    - name: http
      port: 80
      targetPort: 10080
