infra/envoy-gateway/api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: puchi-api-routes
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: puchi-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /core
      backendRefs:
        - name: core-service
          namespace: puchi-backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: auth-service
          namespace: puchi-backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /v1/learn
      backendRefs:
        - name: learn-service
          namespace: puchi-backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /media
      backendRefs:
        - name: media-service
          namespace: puchi-backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /notification
      backendRefs:
        - name: notification-service
          namespace: puchi-backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /user
      backendRefs:
        - name: user-service
          namespace: puchi-backend
          port: 8000
