infra/envoy-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: puchi-routes
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: puchi-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/core
      backendRefs:
        - name: core-service
          namespace: puchi-infra
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /v1/content
      backendRefs:
        - name: content-service
          namespace: puchi-infra
          port: 8000
