infra/envoy-gateway/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: puchi-extauth
  namespace: envoy-gateway-system
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: puchi-routes
  extAuth:
    http:
      backendRef:
        name: st-core-svc
        namespace: puchi-infra
        port: 3567
      path: /session/verify
      headersToBackend:
        - cookie
        - authorization
